--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@tanstack/react-query": "^5.51.1",
     "google-translate-api-browser": "^5.0.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
