--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/hooks": "^7.11.1",
     "@tanstack/react-query": "^5.51.1",
     "google-translate-api-browser": "^5.0.0",
+    "iso-639-1": "^3.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1"
