--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^5.2.1"
   },
   "devDependencies": {
+    "@types/google-translate-api": "^2.3.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
@@ -31,6 +32,7 @@
     "postcss": "^8.4.39",
     "postcss-preset-mantine": "^1.15.0",
     "postcss-simple-vars": "^7.0.1",
+    "typescript": "^5.5.4",
     "vite": "^5.3.1",
     "vitest": "^2.0.3"
   }
