refactor: add vite.env.d.ts file for correct work of css modules. Made new custom type for source and target in state

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -20,10 +20,10 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "baseUrl": "./",
+    "baseUrl": ".",
     "paths": {
-      "google-translate-api-browser/types/*": [
-        "node_modules/google-translate-api-browser/dest/types/*"
+      "google-translate-api-browser/*": [
+        "node_modules/google-translate-api-browser/dest/*"
       ]
     }
   },
