--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -16,7 +16,11 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "baseUrl": ".",
+    "paths": {
+      "google-translate-api-browser/*": ["node_modules/google-translate-api-browser/dest/*"]
+    }
   },
   "include": ["vite.config.ts"]
 }
