refactor: change work logic of languages.ts. Make custom type of TransalteOptions for translate function

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -22,9 +22,8 @@
     "noFallthroughCasesInSwitch": true,
     "baseUrl": ".",
     "paths": {
-      "google-translate-api-browser/*": [
-        "node_modules/google-translate-api-browser/dest/*"
-      ]
+      "google-translate-api-browser": ["node_modules/google-translate-api-browser/dest"],
+      "google-translate-api-browser/*": ["node_modules/google-translate-api-browser/dest/*"]
     }
   },
   "include": ["src"]
